src/test/deca/context/invalid/renduFinal/00double_decl_class.deca
// Description:
//      Double déclaration d'une classe
//      => Le nom d'une classe doit être unique
//
// Resultats:
//      Erreur contextuelle
//      Ligne 13 : Classe B déjà déclarée précédemment

class B {

}

class B {

}

{
    B b = new B();
}